errors found
superpixel.cpp:187:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[2] = lambda * img[y][x][0];
                            ~~~~~~~~~^~
superpixel.cpp:188:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[3] = lambda * img[y][x][1];
                            ~~~~~~~~~^~
superpixel.cpp:189:38: error: type
      '__gnu_cxx::__alloc_traits<std::allocator<Couleur>,
      Couleur>::value_type' (aka 'Couleur') does not provide a
      subscript operator
            p[4] = lambda * img[y][x][2];
                            ~~~~~~~~~^~
16 errors generated.
void KMoyenneTest(){
    EnsemblePoints P;
    for(int i=0;i<100;i++){
        double xbiais=0.;
        double ybiais=0.;
        if(i%3==1){
            xbiais = 100.;
            ybiais = 0.;
        }
        if(i%3==2){
            xbiais = 0.;
            ybiais = 100.;
        }
        Point p;
        p.push_back(xbiais + 1.*(rand()%10)-20.);
        p.push_back(ybiais + 1.*(rand()%10)-20.);
        P.push_back(p);
    }

    EnsemblePoints C = {
        {75.,50.}, {50., 75.}, {25., 25.}};

    EnsemblePoints Cout = KMoyenne(P,C,100);
    EnsemblePoints CRef = FAST_KMoyenne(P,C,100);

    for(int i=0; i<2; i++)
    for(int j=0; j<2; j++)
        CHECK( abs( Cout[i][j] - CRef[i][j] ) <= 0.5 );
}
